--- a/sign-up.html
+++ b/sign-up.html
@@ -20,7 +20,7 @@
 		<div class="login-content">
 			<form action="index.html">
 				<img src="images/undraw_profile_pic_ic5t.svg">
-				<h2 class="title">Sign up</h2>
+				<h2 class="title">Progressive Overload</h2>
            		<div class="input-div one">
            		   <div class="i">
            		   		<i class="fas fa-user"></i>
@@ -30,6 +30,15 @@
            		   		<input type="text" class="input">
            		   </div>
                    </div>
+                   <div class="input-div one">
+                    <div class="i">
+                            <i class="fas fa-user"></i>
+                    </div>
+                    <div class="div">
+                            <h5>Username</h5>
+                            <input type="text" class="input">
+                    </div>
+                 </div>
            		<div class="input-div pass">
            		   <div class="i"> 
            		    	<i class="fas fa-lock"></i>
@@ -39,7 +48,7 @@
            		    	<input type="password" class="input">
             	   </div>
 				</div>
-				<input type="submit" class="btn" value="Login">
+				<input type="submit" class="btn" value="Sign up">
 					<p class="or"><span>OR</span></p>
 					<a class="forgot-password" href="#"> <i class="fab fa-facebook-square"></i> Log in with Facebook</a>
 				<div class="sign-up">Have an account? <a href="index.html" class="sign-up-button">Log in</a>
